--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,10 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
-   <link rel="#" href="#">
+   <link rel="stylesheet" href="./style/style.css">
 
 </head>
-<body> 
-   <h1>Hello  RS School</h1>
+<body>
+            <h1 class="header">Hello  RS School</h1>
 </body>
 </html>
